--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
             "request": "launch",
             "module": "sphinx_autobuild",
             "args": [
+                "-b", "dirhtml",
                 "docs",
                 "docs/_build/html"
             ],
